Stop shopping cart from growing too much
It looks weird because there isn't enough content to fill it

--- a/src/app/pages/home/components/cart/item.css
+++ b/src/app/pages/home/components/cart/item.css
@@ -9,7 +9,7 @@
   font-size: 1.6rem;
   color: #ff4d4d;
   cursor: pointer;
-  padding: 3px;
+  padding: 5px;
   align-self: center;
 
   &:hover {
