--- a/src/app/pages/home/components/home.css
+++ b/src/app/pages/home/components/home.css
@@ -18,6 +18,6 @@
 
 .cart {
   padding: 10px;
-  flex: 1 0 250px;
+  flex: 0.2 0 250px;
   overflow: auto;
 }
